--- a/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
+++ b/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\CustomerDAO.cs" />
     <Compile Include="DataAccessLayer\DataProvider.cs" />
     <Compile Include="GUI\fCustomer.cs">
       <SubType>Form</SubType>
