--- a/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
+++ b/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\RoomDAO.cs" />
     <Compile Include="DAO\RoomTypeDAO.cs" />
     <Compile Include="DataAccessLayer\DataProvider.cs" />
     <Compile Include="GUI\fLogin.cs">
@@ -60,6 +61,12 @@
     </Compile>
     <Compile Include="GUI\fMain.Designer.cs">
       <DependentUpon>fMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\fRoom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fRoom.Designer.cs">
+      <DependentUpon>fRoom.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\fRoomType.cs">
       <SubType>Form</SubType>
@@ -81,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\fMain.resx">
       <DependentUpon>fMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fRoom.resx">
+      <DependentUpon>fRoom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\fRoomType.resx">
       <DependentUpon>fRoomType.cs</DependentUpon>
