--- a/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
+++ b/QLKS_NHOM1/QLKS_NHOM1/QLKS_NHOM1.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DAO\AccountDAO.cs" />
     <Compile Include="DAO\RoomDAO.cs" />
     <Compile Include="DAO\RoomTypeDAO.cs" />
+    <Compile Include="DAO\ServiceDAO.cs" />
     <Compile Include="DataAccessLayer\DataProvider.cs" />
     <Compile Include="GUI\fLogin.cs">
       <SubType>Form</SubType>
@@ -74,6 +75,12 @@
     <Compile Include="GUI\fRoomType.Designer.cs">
       <DependentUpon>fRoomType.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\fService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\fService.Designer.cs">
+      <DependentUpon>fService.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillInfo.cs" />
     <Compile Include="Models\Service.cs" />
     <Compile Include="Models\Bill.cs" />
@@ -94,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\fRoomType.resx">
       <DependentUpon>fRoomType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\fService.resx">
+      <DependentUpon>fService.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
